# despi-m02-rust

./: Cargo.toml  flash.sh  readme.md  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
src/: main.rs
