[package]
name = "despi-m02-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [
    "memory-x",
    "exti",
    "stm32f103ve",
    "time-driver-any",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = "0.4.0"
panic-halt = "1.0.0"
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }

[profile.release]
lto = true        # https://doc.rust-lang.org/cargo/reference/profiles.html#lto
opt-level = 2     # https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
codegen-units = 1 # https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#reduce-parallel-code-generation-units-to-increase-optimization
